--- a/getting-started/setup-and-installation/prerequisites-system-requirements.mdx
+++ b/getting-started/setup-and-installation/prerequisites-system-requirements.mdx
@@ -1,138 +1,232 @@
 ---
 title: "Prerequisites & System Requirements"
-description: "Learn about the minimum compiler versions, C++ standard requirements, and platform compatibility necessary to run GoogleTest smoothly. This page helps you validate your setup before installation, reducing setup surprises and failures."
+description: "An overview of the minimum required C++ standards, compiler versions, platforms, and tools necessary to use GoogleTest and GoogleMock. Guides users to verify compatibility before installation or troubleshooting."
 ---
 
-# Prerequisites & System Requirements for GoogleTest
+# Prerequisites & System Requirements
 
-Before you begin installing and using GoogleTest, it is essential to verify that your development environment meets the minimum requirements. This ensures a smooth build, configuration, and execution experience with GoogleTest, reducing surprises and failures later.
+This page provides a clear overview of the essential C++ standards, compiler versions, supported platforms, and tools you need to run GoogleTest and GoogleMock successfully. Understanding these prerequisites ensures a smooth installation, proper build, and trouble-free use of the testing frameworks.
 
 ---
 
-## 1. Supported Platforms & Compiler Compatibility
+## 1. Supported C++ Standard
 
-GoogleTest is designed to be portable across major operating systems and compilers. Validate that your system falls into one of the supported categories.
+- GoogleTest and GoogleMock **require C++17 or later** for compilation and execution.
+- If your project build system supports it, explicitly specify this standard. For CMake, include:
 
-- **Operating Systems:** Linux, Windows, MacOS.
-- **Compilers:**
-  - GCC 7.0 or newer
-  - Clang 5.0 or newer
-  - Visual Studio 2017 or newer (MSVC)
-  - Intel and other commonly used C++17-compliant compilers
-
-
-> GoogleTest requires a compiler with **full C++17 language standard support**.
-
-
-### Verifying Compiler Support
-
-Ensure your compiler recognizes the C++17 standard and is new enough by running:
-
-```bash
-# GCC example
-gcc --version
-# or
-clang --version
-# MSVC via command prompt
-cl
-```
-
-You can also test compiling a simple C++17 snippet specifying the `-std=c++17` flag (or equivalent) to confirm support.
-
-
-## 2. C++ Standard Requirements
-
-GoogleTest mandates that the **C++17 standard** be enabled during compilation. This can be set explicitly in your build system.
-
-### How to Enable C++17
-
-- **CMake:**
   ```cmake
   set(CMAKE_CXX_STANDARD 17)
   set(CMAKE_CXX_STANDARD_REQUIRED ON)
   ```
 
-- **GCC/clang via command line:**
+- If specifying in compiler flags, add:
+
   ```bash
   -std=c++17
   ```
 
-- **Visual Studio:**
-  Ensure your project properties use the appropriate platform toolset that supports C++17 (usually default in VS2017+).
+- Builds with earlier C++ standards are not supported and will fail.
+
+<Check>
+Make sure your compiler and build environment support and use C++17 at a minimum.
+</Check>
+
+---
+
+## 2. Minimum Compiler Versions and Compatibility
+
+GoogleTest ensures compatibility with a wide range of compilers commonly used in C++ development. Below are the minimum compiler versions required:
+
+- **GCC**: Version 7.0 or later
+- **Clang**: Version 3.4.1 or later
+- **MSVC (Microsoft Visual Studio)**: Visual Studio 2017 Update 3 (MSVC 19.11) or newer
+- **Intel LLVM**: Compatible with Clang versions meeting C++17
+
+<Note>
+Older compiler versions may not support C++17 features and will cause build errors.
+</Note>
+
+---
+
+## 3. Supported Platforms
+
+GoogleTest supports the following platforms thoroughly, aligning with Google’s foundational C++ support policy:
+
+- **Linux and Unix-like systems** including FreeBSD, OpenBSD, NetBSD, Solaris, AIX, Haiku
+- **macOS and iOS** (requires Xcode development environment)
+- **Windows** Desktop editions (including MinGW environments)
+- **Android** (some platform restrictions may apply)
+
+Partial or experimental support exists for embedded platforms like ESP32 and others but is not officially recommended.
+
+See the official foundational C++ support matrix for detailed, up-to-date platform coverage:
+
+[Google Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support)
+
+---
+
+## 4. Required Tools and Build Dependencies
+
+### Build Tools
+
+- **CMake** version 3.14 or later is required for building GoogleTest with the recommended CMake integration methods, including `FetchContent` usage for dependency download.
+  - Download at https://cmake.org/
+
+- For “standalone” builds without CMake, standard build tools like Make or Visual Studio project files are available.
 
 
-> Without C++17, GoogleTest will fail to build or run properly.
+### Additional Tools
 
+- **Git** for cloning the source repository and managing submodules if you choose.
+- **Python 3** (optional) if you plan to run test scripts dependent on it.
 
-## 3. Dependencies
+### Compiler and Linker Notes
 
-GoogleTest is self-contained and has minimal dependencies, but note the following:
+- When building on Windows with Visual Studio, pay attention to runtime linkage options:
+  - By default, GoogleTest links static runtimes, which may conflict with projects using dynamic runtimes.
+  - Use the CMake option `-Dgtest_force_shared_crt=ON` to match dynamic linkage.
 
-- **Threading Support:**
-  - On POSIX-compliant systems, pthreads are used for multi-threaded tests.
-  - GoogleTest auto-detects pthread availability. If detection fails, pthread usage can be enforced or disabled manually by defining:
-  
-    ```
-    -DGTEST_HAS_PTHREAD=1  # Enable pthread explicitly
-    -DGTEST_HAS_PTHREAD=0  # Disable pthread explicitly
-    ```
+- Threading support requires pthreads or equivalent:
+  - On POSIX systems, pthread support is detected automatically.
+  - On Windows, native threading primitives are used.
 
-- **Build Tools:**
-  - CMake (version 3.14 or higher) is strongly recommended as the primary build system.
-  - Make, Ninja, or corresponding build tools depending on OS.
-  
-- **Optional:**
-  - Python3 if you want to run GoogleTest’s own tests (not mandatory for general usage).
+<Warning>
+Ensure the compiler and linker flags are consistent across your project and GoogleTest builds to avoid runtime crashes and linking errors.
+</Warning>
 
+---
 
-## 4. System Resources
+## 5. Key Environment Macros and Features
 
-- **Memory:** Adequate to compile and run GoogleTest and your test binaries. No special minimum but at least 1GB recommended for smooth operation.
-- **Disk Space:** Minimum 100MB free space for source, build artifacts, and installed binaries.
+GoogleTest auto-detects or relies on these environment features:
 
+- **Thread-Safety**: Enabled if pthreads are available or on Windows desktop.
+- **Exception Support**: The framework detects if exceptions are enabled in your compiler.
+- **RTTI (Run-Time Type Information)**: Verifies that RTTI is enabled; required for some GoogleTest features.
+- **File System Access**: Required for death tests and output capture.
 
-## 5. Network & Access Requirements
+In cases where auto-detection fails, define the following macros manually in your build as needed:
 
-- To clone the GoogleTest repository, you need stable internet access unless downloading a released archive manually.
-- For continuous integration environments, ensure your CI agents meet the above system and compiler requirements.
+| Macro                  | Purpose                                 | Value           |
+|------------------------|-----------------------------------------|-----------------|
+| `GTEST_HAS_PTHREAD`    | Manually control pthread availability   | 0 or 1          |
+| `GTEST_HAS_EXCEPTIONS` | Enable or disable exception support      | 0 or 1          |
+| `GTEST_HAS_RTTI`       | Enable or disable RTTI detection         | 0 or 1          |
+
+Refer to the header [`gtest-port.h`](https://github.com/google/googletest/blob/main/googletest/include/gtest/internal/gtest-port.h) for detailed detection logic.
+
+---
+
+## 6. Network and Access Considerations
+
+- No network access is strictly required to build or run tests.
+- If you use CMake's `FetchContent` to download GoogleTest dynamically, internet access is required during the configuration phase.
+
+---
+
+## 7. Verifying Your Environment
+
+To confirm your development environment is ready, follow these practical checks:
+
+1. **Check compiler version:**
+
+   - GCC:
+
+     ```bash
+     g++ --version
+     ```
+
+   - Clang:
+
+     ```bash
+     clang++ --version
+     ```
+
+   - MSVC:
+
+     Open Visual Studio and check version under Help > About.
+
+2. **Confirm C++17 support:**
+
+   Create a simple file named `test.cpp` with:
+
+   ```cpp
+   #include <optional>
+   int main(){ std::optional<int> o; return 0; }
+   ```
+
+   Compile with:
+
+   ```bash
+   g++ -std=c++17 test.cpp -o test
+   ./test
+   ```
+
+3. **Check pthreads availability (Linux/macOS):**
+
+   ```bash
+   ldconfig -p | grep pthread
+   ```
+
+4. **Ensure CMake version:**
+
+   ```bash
+   cmake --version
+   ```
+
+5. **Confirm Visual Studio configuration (Windows):**
+
+   - Open your project settings and verify both your project and GoogleTest use matching runtime library settings (e.g., /MD vs /MT).
+
+<Check>
+Fix any discrepancies before proceeding to installation.
+</Check>
+
+---
+
+## 8. Common Pitfalls & Best Practices
+
+- **Mixing runtimes on Windows**: Mismatched static/dynamic CRT linkages cause linker errors and subtle crashes. Use the `gtest_force_shared_crt` CMake option to align runtimes.
+
+- **Unsupported compiler versions**: Attempts to build with outdated compilers fail silently or generate confusing errors. Upgrade your compiler to a version that supports C++17.
+
+- **Embedded or constrained platforms**: GoogleTest may not fully function due to missing features like filesystem or threading support.
+
+- **Explicitly define environment macros** if GoogleTest incorrectly detects threading or exceptions support.
+
+- **Use updated CMake** to leverage modern fetching and integration logic.
+
+---
+
+## 9. Resources and Further Reading
+
+- [GoogleTest GitHub Repository](https://github.com/google/googletest)
+- [GoogleTest Primer](overview/intro-concepts/product-value-proposition)
+- [Installing with CMake Guide](getting-started/setup-and-installation/installing-with-cmake)
+- [Supported Platforms Matrix](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md)
 
 
 ---
 
-## Practical Tips & Common Pitfalls
-
-- Ensure your compiler and linker flags don't conflict; GoogleTest provides CMake functions that automatically adjust appropriate flags.
-
-- If you face linker runtime mismatches on Windows (like CRT mismatch errors), use `-Dgtest_force_shared_crt=ON` during CMake configuration to align runtime linkage.
-
-- Avoid mixing incompatible compiler settings between your project and GoogleTest (e.g., debug vs release, static vs dynamic runtime).
-
-- If your build system does not support `CMAKE_CXX_STANDARD`, explicitly pass the flag in your compile options.
-
-- Always call Google's initializer functions (`testing::InitGoogleTest()`) with proper arguments to ensure flag parsing and setup.
+For a smooth start, verify your environment against the above requirements before moving on to installation and configuration. Should you encounter compatibility issues, consult the troubleshooting sections in the setup and installation guides.
 
 
 ---
 
-## Verification Checklist Before Installation
+## Example: Verify Compiler and C++ Standard Support
 
-Before proceeding with installation, verify the following:
+```bash
+# Check GCC version and support for C++17
+g++ --version
+# Expected: 7.0 or later
 
-- [ ] Compiler version is C++17 compatible.
-- [ ] Operating system is supported (Linux, Windows, or Mac).
-- [ ] CMake version is >= 3.14 (for FetchContent use).
-- [ ] Pthread support is available or explicitly disabled/enabled.
-- [ ] Suitable build tools and permissions to build/install software.
-- [ ] Network access for cloning or downloading GoogleTest source.
+# Compile a simple C++17 program
+echo '#include <optional> int main() { std::optional<int> o; return 0; }' > test.cpp
 
+g++ -std=c++17 test.cpp -o test && ./test
+if [ $? -eq 0 ]; then echo 'C++17 supported'; else echo 'Upgrade compiler'; fi
+```
 
 ---
 
-For detailed installation instructions, please see the [Installation Options](../installation-options) page.
-
-For configuring your build and running your first tests, refer to the [Configuration & Verification](../configuration-verification) page.
-
-
-<Tip>
-Ensuring your environment meets these prerequisites upfront saves hours of troubleshooting later. Modern C++17 support is the cornerstone to a successful GoogleTest setup.
-</Tip>
+This completes the overview of prerequisites and system requirements for GoogleTest and GoogleMock. With your environment properly set up, you can confidently proceed to install and integrate the framework into your projects.
